Parse --add-opens and --add-exports in launcher